prevent horizontal scroll and fixed hyperlinks

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -65,6 +65,8 @@
 
 body {
   font-family: 'Montserrat', 'Sans Serrif';
+  overflow-x: hidden !important;
+  max-width: 100%;
 }
 
 .primary-text {
